# spring-tui

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: release.yml  test.yml
example/: rake-service-config.json  rake-service-config.yaml  security-config.toml
src/: lib.rs  main.rs
src/api/: mod.rs  util.rs
src/cli/: mod.rs
src/config/: config_parser.rs  global_config.rs  mod.rs  util.rs
src/generator/: mod.rs
src/tui/: mod.rs
src/types/: api.rs  config.rs  generic.rs  mod.rs
tests/: cli.rs  integration_test.rs
